// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoryList should render and display a caption 1`] = `
<div>
  <Caption
    title="Willkommen"
  />
  <RemoteContent
    centered={true}
    dangerouslySetInnerHTML={
      Object {
        "__html": "test content",
      }
    }
  />
  <CategoryListstyles__List>
    <CategoryListItem
      category={
        CategoryModel {
          "_availableLanguages": undefined,
          "_content": undefined,
          "_id": 35,
          "_lastUpdate": undefined,
          "_order": undefined,
          "_parentPath": undefined,
          "_path": "/augsburg/de/willkommen/willkommen-in-augsburg",
          "_thumbnail": undefined,
          "_title": "Willkommen in Augsburg",
        }
      }
      key="35"
    />
    <CategoryListItem
      category={
        CategoryModel {
          "_availableLanguages": undefined,
          "_content": undefined,
          "_id": 35,
          "_lastUpdate": undefined,
          "_order": undefined,
          "_parentPath": undefined,
          "_path": "/augsburg/de/willkommen/willkommen-in-augsburg",
          "_thumbnail": undefined,
          "_title": "Willkommen in Augsburg",
        }
      }
      key="35"
    />
  </CategoryListstyles__List>
</div>
`;

exports[`CategoryList should render and not display a caption 1`] = `
<div>
  <RemoteContent
    centered={true}
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
  />
  <CategoryListstyles__List>
    <CategoryListItem
      category={
        CategoryModel {
          "_availableLanguages": undefined,
          "_content": undefined,
          "_id": 35,
          "_lastUpdate": undefined,
          "_order": undefined,
          "_parentPath": undefined,
          "_path": "/augsburg/de/willkommen/willkommen-in-augsburg",
          "_thumbnail": undefined,
          "_title": "Willkommen in Augsburg",
        }
      }
      key="35"
    />
    <CategoryListItem
      category={
        CategoryModel {
          "_availableLanguages": undefined,
          "_content": undefined,
          "_id": 35,
          "_lastUpdate": undefined,
          "_order": undefined,
          "_parentPath": undefined,
          "_path": "/augsburg/de/willkommen/willkommen-in-augsburg",
          "_thumbnail": undefined,
          "_title": "Willkommen in Augsburg",
        }
      }
      key="35"
    />
  </CategoryListstyles__List>
</div>
`;
